rework buildoor overview and add consitent cross instance navigation
