# pkg/webui/handlers/docs/swagger.yaml
@@ -20,8 +20,6 @@ definitions:
         type: boolean
       port:
         type: integer
-      use_proposer_fee_recipient:
-        type: boolean
       validator_count:
         type: integer
     type: object
@@ -47,6 +45,87 @@ definitions:
       pending_payments_gwei:
         type: integer
       withdrawable_epoch:
+        type: integer
+    type: object
+  api.OverviewBalances:
+    properties:
+      cl_balance_gwei:
+        type: integer
+      effective_balance_gwei:
+        type: integer
+      pending_payments_gwei:
+        type: integer
+      wallet_address:
+        type: string
+      wallet_balance_wei:
+        type: string
+    type: object
+  api.OverviewELClient:
+    properties:
+      code:
+        type: string
+      commit:
+        type: string
+      name:
+        type: string
+      version:
+        type: string
+    type: object
+  api.OverviewResponse:
+    properties:
+      balances:
+        $ref: '#/definitions/api.OverviewBalances'
+      builder_index:
+        type: integer
+      builder_pubkey:
+        type: string
+      current_slot:
+        type: integer
+      el_client:
+        $ref: '#/definitions/api.OverviewELClient'
+      is_registered:
+        type: boolean
+      running:
+        type: boolean
+      services:
+        $ref: '#/definitions/api.OverviewServices'
+      stats:
+        $ref: '#/definitions/api.OverviewStats'
+      version:
+        type: string
+    type: object
+  api.OverviewServices:
+    properties:
+      builder_api_available:
+        type: boolean
+      builder_api_enabled:
+        type: boolean
+      epbs_available:
+        type: boolean
+      epbs_enabled:
+        type: boolean
+      epbs_registration_state:
+        type: string
+      lifecycle_available:
+        type: boolean
+      lifecycle_enabled:
+        type: boolean
+    type: object
+  api.OverviewStats:
+    properties:
+      bids_submitted:
+        type: integer
+      bids_won:
+        type: integer
+      blocks_included:
+        type: integer
+      builder_api_blocks_published:
+        type: integer
+      builder_api_headers_requested:
+        type: integer
+      builder_api_registered_validators:
+        type: integer
+      slots_built:
         type: integer
     type: object
   api.ProposerPreferencesEntry:
@@ -134,9 +213,9 @@ definitions:
         type: integer
       bid_start_time:
         type: integer
-      bid_static_min:
-        type: boolean
       build_start_time:
+        type: integer
+      p2p_bid_subsidy:
         type: integer
       payload_build_delay:
         type: integer
@@ -245,6 +324,23 @@ paths:
               type: string
             type: object
       summary: Get Builder API status
+      tags:
+      - Buildoor
+  /api/buildoor/overview:
+    get:
+      description: |-
+        Returns a single-payload summary used by the multi-instance overview UI:
+        running state, builder pubkey, current slot, EL client info, available/enabled
+        services, balances, and recent build stats.
+      operationId: getOverview
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/api.OverviewResponse'
+      summary: Get a compact overview of this buildoor instance
       tags:
       - Buildoor
   /api/buildoor/proposer-preferences:
